package pkg

type KotofeyJacket struct{}

func (jacket KotofeyJacket) PrintDetails() string {
	return "пиджаков линейки Котофей"
}
