package pkg

type KotofeyPant struct{}

func (jacket KotofeyPant) PrintDetails() string {
	return "брюк линейки Котофей"
}
