package pkg

type Pant interface {
	PrintDetails() string
}
